<!--
  ~ /*
  ~ *  Created by Nishu Sharma on 26/10/22, 12:46 AM
  ~ *  Copyright Ⓒ 2022. All rights reserved Ⓒ 2022 http://freefuninfo.com/
  ~ *  Last modified: 25/10/22, 11:48 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<resources>
    <string name="app_name">Scrappy</string>
    <string name="button">Button</string>
    <string name="in_kgs">(in Kgs)</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter UserName</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="already_have_an_account">already have an account?</string>
</resources>