<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *  Created by Nishu Sharma on 02/11/22, 8:02 AM
  ~ *  Copyright Ⓒ 2022. All rights reserved Ⓒ 2022 http://freefuninfo.com/
  ~ *  Last modified: 02/11/22, 8:02 AM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg1"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/wlCm"
        android:layout_width="247dp"
        android:layout_height="136dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        app:srcCompat="@drawable/wlcm1" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/lightBlack"
        android:textColor="#121111"
        android:textColorLink="#121212"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_below="@id/UserName"
        android:layout_marginBottom="28dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#0B0A0A"
        android:textColorLink="#0E0D0D"
        android:textColorHint="@color/lightBlack"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Login"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_below="@id/Password"
        android:layout_marginBottom="276dp"
        android:background="@drawable/drawable_btn"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frgtPass"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otherSign"
        app:layout_constraintTop_toBottomOf="@+id/frgtPass"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSign">

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/gitlogo"
            tools:layout_editor_absoluteX="162dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="don't have an account? "
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/SignupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sign Up"
        android:backgroundTint="@color/white"
        android:textColor="#680D0D"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontAccount"
        app:layout_constraintVertical_bias="0.157" />




</androidx.constraintlayout.widget.ConstraintLayout>